fixing some bugs in the site

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div class="container-principal">
-        <header class="header">
+        <div class="header">
             <p id="DE">DrivenEats</p>
             <p id="minutes">Sua comida em 6 minutos</p>
-        </header>
+        </div>
         <div class="conteudo">
 
             <p class="texto">Primeiro, seu prato</p>
