Changing the name

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
-    <title>DrivenEats</title>
+    <title>YouEats</title>
 </head>
 <body>
     <div class="container-principal">
         <div class="header">
-            <p id="DE">DrivenEats</p>
+            <p id="DE">YouEats</p>
             <p id="minutes">Sua comida em 6 minutos</p>
         </div>
         <div class="conteudo">
